--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,8 +10,11 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS -->
-    <link rel="stylesheet" href="../CSS/style.css">
+    <!-- <link rel="stylesheet" href="../CSS/style.css"> -->
+     <!-- for running on local server  -->
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
+<!-- for deploying on github -->
 
 <body>
     <header>
@@ -117,56 +120,56 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-img" style="background-image: url('../Images/box1_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box1_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('../Images/box2_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box2_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('../Images/box3_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box3_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2>Mobiles</h2>
-                <div class="box-img" style="background-image: url('../Images/box4_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box4_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box1 box">
             <div class="box-content">
                 <h2>Beauty Pics</h2>
-                <div class="box-img" style="background-image: url('../Images/box5_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box5_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
                 <h2>Pet Care</h2>
-                <div class="box-img" style="background-image: url('../Images/box6_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box6_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box3 box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-                <div class="box-img" style="background-image: url('../Images/box7_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box7_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
         <div class="box4 box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="box-img" style="background-image: url('../Images/box8_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/box8_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
