--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="../CSS/style.css"> -->
      <!-- for running on local server  -->
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <!-- for deploying on github -->
 
