correcting css and images path

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="../CSS/style.css"> -->
      <!-- for running on local server  -->
-    <link rel="stylesheet" href="/amzon_clone/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <!-- for deploying on github -->
 
@@ -120,7 +120,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Clothes</h2>
-                <div class="box-img" style="background-image: url('/Images/box1_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('./Images/box1_image.jpg');"></div>
                 <p>See More</p>
             </div>
         </div>
